# Osl

./: .gitignore  CMakeLists.txt  OslConfig.h.in  README.md
doc/: Doxyfile
doc/html/: Comparison_8h.html  Comparison_8h__dep__incl.dot  Comparison_8h__dep__incl.map  Comparison_8h__incl.dot  Comparison_8h__incl.map  Comparison_8h_source.html  ComplexCubicSpline_8h.html  ComplexCubicSpline_8h__dep__incl.dot  ComplexCubicSpline_8h__dep__incl.map  ComplexCubicSpline_8h__incl.dot  ComplexCubicSpline_8h__incl.map  ComplexCubicSpline_8h_source.html  ComplexLinearSpline_8cpp.html  ComplexLinearSpline_8cpp__incl.dot  ComplexLinearSpline_8cpp__incl.map  ComplexLinearSpline_8h.html  ComplexLinearSpline_8h__dep__incl.dot  ComplexLinearSpline_8h__dep__incl.map  ComplexLinearSpline_8h__incl.dot  ComplexLinearSpline_8h__incl.map  ComplexLinearSpline_8h_source.html  ComplexQuadraticSpline_8cpp.html  ComplexQuadraticSpline_8cpp__incl.dot  ComplexQuadraticSpline_8cpp__incl.map  ComplexQuadraticSpline_8h.html  ComplexQuadraticSpline_8h__dep__incl.dot  ComplexQuadraticSpline_8h__dep__incl.map  ComplexQuadraticSpline_8h__incl.dot  ComplexQuadraticSpline_8h__incl.map  ComplexQuadraticSpline_8h_source.html  Cone3D_8cpp.html  Cone3D_8cpp__incl.dot  Cone3D_8cpp__incl.map  Cone3D_8h.html  Cone3D_8h__dep__incl.dot  Cone3D_8h__dep__incl.map  Cone3D_8h__incl.dot  Cone3D_8h__incl.map  Cone3D_8h_source.html  Constants_8h.html  (+524 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+50 more)
doc/latex/: Comparison_8h.tex  Comparison_8h__dep__incl.dot  Comparison_8h__incl.dot  ComplexCubicSpline_8h.tex  ComplexCubicSpline_8h__dep__incl.dot  ComplexCubicSpline_8h__incl.dot  ComplexLinearSpline_8cpp.tex  ComplexLinearSpline_8cpp__incl.dot  ComplexLinearSpline_8h.tex  ComplexLinearSpline_8h__dep__incl.dot  ComplexLinearSpline_8h__incl.dot  ComplexQuadraticSpline_8cpp.tex  ComplexQuadraticSpline_8cpp__incl.dot  ComplexQuadraticSpline_8h.tex  ComplexQuadraticSpline_8h__dep__incl.dot  ComplexQuadraticSpline_8h__incl.dot  Cone3D_8cpp.tex  Cone3D_8cpp__incl.dot  Cone3D_8h.tex  Cone3D_8h__dep__incl.dot  Cone3D_8h__incl.dot  Constants_8h.tex  Constants_8h__dep__incl.dot  Constants_8h__incl.dot  Containers_8h.tex  Containers_8h__incl.dot  CubicSpline3D_8cpp.tex  CubicSpline3D_8cpp__incl.dot  CubicSpline3D_8h.tex  CubicSpline3D_8h__dep__incl.dot  CubicSpline3D_8h__incl.dot  CubicSpline_8cpp.tex  CubicSpline_8cpp__incl.dot  CubicSpline_8h.tex  CubicSpline_8h__dep__incl.dot  CubicSpline_8h__incl.dot  Ellipsoid3D_8cpp.tex  Ellipsoid3D_8cpp__incl.dot  Ellipsoid3D_8h.tex  Ellipsoid3D_8h__dep__incl.dot  (+175 more)
include/: OslConfig.h
include/Osl/: Constants.h  Globals.h  Osl.h  OslExe.cpp  OslLib.cpp
include/Osl/Endian/: Endian.h  Endianness.h  SwapEndian.h
include/Osl/Geography/: Ellipsoid.cpp  Ellipsoid.h  GeoPoint.cpp  GeoPoint.h  Geography.h  LocalCartesian.cpp  LocalCartesian.h  dd_to_dms.h  dms_to_dd.h
include/Osl/Geography/_maxima/: authalic.wxm  conformal.wxm  init.mac  meridian.wxm
include/Osl/Geometry/: Geometry.h  Rotation3D.cpp  Rotation3D.h  Vector3D.cpp  Vector3D.h  point3.cpp  point3.h  rotmatrix3.cpp  rotmatrix3.h  vector3.cpp  vector3.h
include/Osl/Geometry/Interpolator3D/: CubicSpline3D.cpp  CubicSpline3D.h  Interpolator3D.h  LinearSpline3D.cpp  LinearSpline3D.h
include/Osl/Geometry/Shape3D/: Cone3D.cpp  Cone3D.h  Ellipsoid3D.cpp  Ellipsoid3D.h  Line3D.cpp  Line3D.h  Plane3D.cpp  Plane3D.h  Shape3D.h  Sphere3D.cpp  Sphere3D.h
include/Osl/Maths/: Maths.h
include/Osl/Maths/Arrays/: Arrays.h  linspace.h  logspace.h  regspace.h
include/Osl/Maths/Comparison/: Comparison.h  almost_equal.h  almost_one.h  almost_zero.h  true_zero.h
include/Osl/Maths/Functions/: sinc.h
include/Osl/Maths/Interpolator/: ComplexCubicSpline.cpp  ComplexCubicSpline.h  ComplexLinearSpline.cpp  ComplexLinearSpline.h  ComplexQuadraticSpline.cpp  ComplexQuadraticSpline.h  CubicSpline.cpp  CubicSpline.h  Interpolator.h  InterpolatorEnum.h  LinearSpline.cpp  LinearSpline.h  QuadraticSpline.cpp  QuadraticSpline.h  Sinc.cpp  Sinc.h
include/Osl/Maths/Roots/: Roots.h  cubic_roots.h  linear_root.h  quadratic_roots.h  quartic_roots.h
test/Geography/: test_Ellipsoid.cpp  test_GeoPoint.cpp  test_dd_to_dms_dms_to_dd.cpp
test/Geometry/: test_Vector3D_Rotation3D.cpp
test/Geometry/Interpolator/: test_Interpolator3D.cpp
test/Maths/Arrays/: test_arrays.cpp
test/Maths/Interpolator/: test_Interpolator.cpp
test/Maths/Roots/: tests_Roots.cpp
test/Maths/Searching/: test_binary_search.cpp
